--- a/Views/Contact/Index.cshtml
+++ b/Views/Contact/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<h1>Click below to contact us</h1>
+﻿<h3>
+    Please contact us by sending an email using the button below
 
-<email address="khklee0705@gmail.com" content="Click here"></email>
+</h3>
 
+<email address="info@@bethanyspieshop.com" content="Contact us"></email>
