--- a/Views/Pie/Details.cshtml
+++ b/Views/Pie/Details.cshtml
@@ -1,9 +1,10 @@
-﻿@model Pie
+﻿
+@model Pie
 
 <h2>@Model.Name</h2>
 
 <div class="thumbnail">
-    <img alt="@Model.Name" src="@Model.ImageUrl"/>
+    <img alt="@Model.Name" src="@Model.ImageUrl">
     <div class="caption-full">
         <h3 class="pull-right">@Model.Price</h3>
         <h3>
@@ -13,9 +14,7 @@
         <p>@Model.LongDescription</p>
         <div class="addToCart">
             <p class="button">
-                <a class="btn btn-primary"
-                   asp-controller="ShoppingCart"
-                   asp-action="AddToShoppingCart"
+                <a class="btn btn-primary" asp-controller="ShoppingCart" asp-action="AddToShoppingCart"
                    asp-route-pieId="@Model.PieId">Add to cart</a>
             </p>
         </div>
